# Burn-CME

./: LICENSE  NOTICE  README.md
Burn-CME/: CMakeLists.txt  Makefile  README.md  build.sh  burn-cme.desktop
Burn-CME/src/CLI/: main.cpp
Burn-CME/src/GUI/: gui_main.cpp  mainwindow.cpp  mainwindow.h  progressdialog.h
Burn-CME/src/common/: core.h
